# pyMBA

./: README.md  setup.py
src/: CMakeLists.txt  algos.h  pyMBA.cpp
